--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "framer-motion": "^11.0.20",
+    "i18next": "^23.10.1",
     "next": "14.1.4",
+    "next-intl": "^3.10.0",
     "react": "^18",
     "react-countdown": "^2.3.5",
     "react-dom": "^18"
