--- a/package.json
+++ b/package.json
@@ -11,16 +11,19 @@
   "dependencies": {
     "framer-motion": "^11.0.20",
     "i18next": "^23.10.1",
+    "mongoose": "^8.4.3",
     "next": "14.1.4",
     "next-intl": "^3.10.0",
     "react": "^18",
     "react-countdown": "^2.3.5",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-modal": "^3.16.1"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-modal": "^3.16.3",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.4",
